<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_Chats">

    <fragment
        android:id="@+id/navigation_Chats"
        android:name="com.example.msgphone.ui.chats.ChatsFragment"
        android:label="@string/title_Chats"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_Contacts"
        android:name="com.example.msgphone.ui.contacts.ContactsFragment"
        android:label="@string/title_Contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/navigation_More"
        android:name="com.example.msgphone.ui.more.MoreFragment"
        android:label="@string/title_More"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/navigation_Me"
        android:name="com.example.msgphone.ui.me.MeFragment"
        android:label="@string/title_Me"
        tools:layout="@layout/fragment_me" />
</navigation>