<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EAE8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_Zust"
            android:textSize="60dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MsgPhone"
            android:textColor="@color/black"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="25dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Username_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Username_Tv"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/Nickname"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/Username_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/Username_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/view1"
            android:hint="@string/Nickname_Hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray" />

        <ImageView
            android:id="@+id/UsernameDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Acc_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Account_Tv"
            android:layout_width="81dp"
            android:layout_height="40dp"
            android:text="@string/Account"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/Account_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/Account_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/view2"
            android:hint="@string/Acc_Hint"
            android:textColorHint="@color/gray"
            android:textColor="@color/black" />

        <ImageView
            android:id="@+id/AccDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:visibility="gone"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Pwd_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Password_Tv"
            android:layout_width="81dp"
            android:layout_height="40dp"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/Password_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/Pwd_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/view3"
            android:hint="@string/Pwd_Hint"
            android:password="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="Deprecated" />

        <ImageView
            android:id="@+id/PasswordDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/RePwd_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/RePassword_Tv"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/RePassword"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:textSize="20sp" />

        <View
            android:id="@+id/view4"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/RePassword_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/RePassword_Et"
            android:password="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/view4"
            android:hint="@string/PwdConfirm_Hint"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="Deprecated" />

        <ImageView
            android:id="@+id/RePwdDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/error_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordConfirm"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="invisible"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Btn_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp">


        <Button
            android:id="@+id/Submit_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_shape"
            android:text="@string/Submit" />


    </RelativeLayout>

</LinearLayout>