<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EAE8E8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_Zust"
            android:textSize="60dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MsgPhone"
            android:textColor="@color/black"
            android:textSize="30dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/Acc_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Account_Tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/Acc"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/Account_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/Acc_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/view1"
            android:background="@drawable/editview_bg_shape"
            android:hint="@string/Acc_Hint"
            android:text="111111"
            android:textColor="@color/black"
            android:textColorHint="@color/gray">

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/AccDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:background="@color/black"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Pwd_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/editview_bg_shape"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Password_Tv"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/Pwd"
            android:textSize="25dp"
            android:textColor="@color/black"/>

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/Password_Tv"
            android:background="#000000" />

        <EditText
            android:id="@+id/Password_Et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/view2"
            android:background="@drawable/editview_bg_shape"
            android:hint="@string/Pwd_Hint"
            android:password="true"

            android:text="111111"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            tools:ignore="Deprecated" />

        <ImageView
            android:id="@+id/PwdDelete_Iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_24"
            android:background="@color/black"
            android:visibility="gone"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/Btn_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/Login_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_shape"
            android:text="@string/Login" />

        <Button
            android:id="@+id/Register_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/Login_Btn"
            android:layout_marginLeft="50dp"
            android:background="@drawable/btn_bg_shape"
            android:text="@string/Register"/>


    </RelativeLayout>

</LinearLayout>