<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/title_Rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:visibility="visible">

        <TextView
            android:id="@+id/title_Tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/message"
            android:textSize="18sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/index_Rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_Rl"
        android:layout_marginBottom="60dp"
        android:background="@color/gray_light">

<!--        <androidx.viewpager.widget.ViewPager-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent" />-->

        <FrameLayout
            android:id="@+id/index_Fl"
            android:name="com.example.msgphone.ChatFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuIcon_Rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/index_Rl"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/chatIcon_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_chat_24" />

            <ImageView
                android:id="@+id/contactsIcon_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_contacts_24"/>

            <ImageView
                android:id="@+id/moreIcon_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more_24"/>

            <ImageView
                android:id="@+id/meIcon_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_me_24"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuChosen_Rl"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/index_Rl"
        android:layout_marginTop="-60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/chatChosen_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_chat_24"
                android:background="@color/gray"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/contactsChosen_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_contacts_24"
                android:background="@color/gray"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/moreChosen_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more_24"
                android:background="@color/gray"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/meChosen_Iv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_me_24"
                android:background="@color/gray"
                android:visibility="invisible"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuText_Rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/menuIcon_Rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chat"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contacts"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/more"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/me"
                android:textSize="12sp"/>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menuTextChosen_Rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/menuIcon_Rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/chatChosen_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/chat"
                android:textSize="12sp"
                android:background="@color/gray"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/contactsChosen_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/contacts"
                android:textSize="12sp"
                android:background="@color/gray"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/moreChosen_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/more"
                android:textSize="12sp"
                android:background="@color/gray"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/meChosen_Tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/me"
                android:textSize="12sp"
                android:background="@color/gray"
                android:visibility="invisible"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>